2008-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* jack-connection.h (file added): 
	* library interface version to 21:0:1.

2008-08-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 20 frozen (2.5.1 release)

2008-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.cpp (quit_async added): 
	* library interface version to 20:0:0.
	
2008-08-16  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 19 frozen (2.5.0 release)
	* audioio-loop.h (id): Renamed to tag().

2008-07-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.cpp (audio_object_open_info): Renamed from
	audio_object_info and moved to private scope.

	* eca-object-factory.cpp (audio_object_format_to_eos): Added.

2008-07-08  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* ctrl-source.h: Major refactoring. No longer
	inherits ECA_AUDIO_POSITION.
	* generic-controller.h: Now inherits ECA_AUDIO_POSITION.

2008-07-06  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-time.h (valid): Added.
	* eca-audio-time.h (mark_as_invalid): Added.

2008-07-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-position.h (seek_position): Moved to protected scope. The signature
	and the call semantics were also changed. All classed inhering from 
	ECA_AUDIO_POSITION need to be updated.
	* eca-audio-position.h (supports_seeking, supports_seeking_sample_accurate): Added
	as pure virtual methods.
	* audioio.h (supports_seeking_sample_accurate): Added as implemented 
	inherited method.

2008-03-11  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* dynamic-parameters.h (variable_params): Added.

2008-03-10  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-time.h: Modified constructor variants. Added sample_rate as
	a parameter to most setter functions.
	* audioio-aac.h, audioio-flac.h, audioio-mikmod.h, audioio-ogg.h, audioio-timidity.h: 
	Inheritance of AUDIO_IO_FORKED_STREAM changed from protected to public.
	* audioio-forked-stream.h (start_io,stop_io): Added new functions. Most